# fruityvice-sdk

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/nutrition_sdk/: __about__.py  models.py  sdk.py
tests/: __init__.py  test_sdk.py
