[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nutrition-sdk"
dynamic = ["version"]
description = 'Python SDK for the FruityVice API'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "protoncodecoin", email = "princeaffumasante@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"requests",
"responses",
"pydantic",
]

[project.urls]
Documentation = "https://github.com/protoncodecoin/nutrition-sdk#readme"
Issues = "https://github.com/protoncodecoin/nutrition-sdk/issues"
Source = "https://github.com/protoncodecoin/nutrition-sdk"

[tool.hatch.version]
path = "src/nutrition_sdk/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/nutrition_sdk tests}"

[tool.coverage.run]
source_pkgs = ["nutrition_sdk", "tests"]
branch = true
parallel = true
omit = [
  "src/nutrition_sdk/__about__.py",
]

[tool.coverage.paths]
nutrition_sdk = ["src/nutrition_sdk", "*/nutrition-sdk/src/nutrition_sdk"]
tests = ["tests", "*/nutrition-sdk/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
